fix: release task (#21)